--- a/pages/add_data.html
+++ b/pages/add_data.html
@@ -268,7 +268,7 @@
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-12 p-0">
-                            <img src="../assets/icons/new_diana_logo.png" />
+                            <img class="company-logo" src="../assets/icons/new_diana_logo.png" />
 
                             <ul class="list-unstyled m-0 float-right">
                                 <li class="">
