--- a/pages/individuals.html
+++ b/pages/individuals.html
@@ -217,7 +217,7 @@
                                         <select class="form-control select" id="currency" data-placeholder="Currency" tabindex="1"></select>
                                     </div>
                                 </div>
-                                <div class="col-sm-2">
+                                <div class="col-sm-4">
                                     <div class="form-group">
                                         <label> Est. cost (EUR)</label>
                                         <a class="currency-info" href="#"><i class="fa fa-info"></i></a>
@@ -230,12 +230,7 @@
                                         <input type="number" class="form-control" placeholder="Weight (kg)..." id="kg" />
                                     </div>
                                 </div>
-                                <div class="col-sm-2">
-                                    <div class="form-group">
-                                        <label> DIMS</label>
-                                        <input type="text" class="form-control" placeholder="Dims..." id="dims" />
-                                    </div>
-                                </div>
+
                                 <div class="col-sm-2">
                                     <div class="form-group">
                                         <label> PIECES</label>
@@ -269,7 +264,7 @@
                             </div>
                             <div class="row">
                                 <div class="form-group col-sm-12">
-                                    <label>Notes</label>
+                                    <label>Notes / Dims</label>
                                     <textarea class="form-control" rows="3" id="notes"></textarea>
                                 </div>
                             </div>
@@ -504,7 +499,7 @@
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-12 p-0">
-                            <img src="../assets/icons/new_diana_logo.png" />
+                            <img class="company-logo" src="../assets/icons/new_diana_logo.png" />
 
                             <ul class="list-unstyled m-0 float-right">
                                 <li class="">
