--- a/pages/consolidations.html
+++ b/pages/consolidations.html
@@ -167,6 +167,8 @@
                             <div class="col-4">
                                 <div class="form-group">
                                     <label> To</label>
+                                    <a id="add-city-btn" href="#"><i class="fa fa-plus-square"></i></a>
+                                    <a id="refresh-city-btn" href="#"><i class="fa fa-refresh"></i></a>
                                     <select class="form-control select" id="group-to-select" data-placeholder="Choose city..." tabindex="1"></select>
                                 </div>
                             </div>
@@ -185,6 +187,12 @@
                             </div>
                         </div>
                         <div class="row">
+                            <div class="col-12">
+                                <div class="form-group">
+                                    <label>Notes / Dims</label>
+                                    <textarea class="form-control" rows="3" id="notes"></textarea>
+                                </div>
+                            </div>
                             <div class="col-6">
                                 <div class="form-group">
                                     <label> Currency</label>
@@ -306,7 +314,7 @@
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-12 p-0">
-                            <img src="../assets/icons/new_diana_logo.png" />
+                            <img class="company-logo" src="../assets/icons/new_diana_logo.png" />
 
                             <ul class="list-unstyled m-0 float-right">
                                 <li class="">
