--- a/pages/done_consolidations.html
+++ b/pages/done_consolidations.html
@@ -208,6 +208,14 @@
                                 </div>
                             </div>
                         </div>
+                        <div class="row">
+                            <div class="col-12">
+                                <div class="form-group">
+                                    <label>Notes / Dims</label>
+                                    <textarea class="form-control" rows="3" id="group-notes" disabled></textarea>
+                                </div>
+                            </div>
+                        </div>
                         <hr />
                         <div class="row" id="grouped-jobs-cost">
                             <div class="col-6">
@@ -351,7 +359,7 @@
                             <input class="form-control" id="done_consolidation_id" />
                         </div>
                         <div class="form-group col-sm-12">
-                            <label>Notes</label>
+                            <label>Notes / Dims</label>
                             <textarea class="form-control" rows="3" id="notes"></textarea>
                         </div>
                     </div>
@@ -478,7 +486,7 @@
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-12 p-0">
-                            <img src="../assets/icons/new_diana_logo.png" />
+                            <img class="company-logo" src="../assets/icons/new_diana_logo.png" />
 
                             <ul class="list-unstyled m-0 float-right">
                                 <li class="">
