--- a/pages/done_individuals.html
+++ b/pages/done_individuals.html
@@ -133,7 +133,7 @@
                             <input class="form-control" id="done_ind_id" />
                         </div>
                         <div class="form-group col-sm-12">
-                            <label>Notes</label>
+                            <label>Notes / Dims</label>
                             <textarea class="form-control" rows="3" id="notes"></textarea>
                         </div>
                     </div>
@@ -418,7 +418,7 @@
                 <div class="container-fluid">
                     <div class="row">
                         <div class="col-12 p-0">
-                            <img src="../assets/icons/new_diana_logo.png" />
+                            <img class="company-logo" src="../assets/icons/new_diana_logo.png" />
 
                             <ul class="list-unstyled m-0 float-right">
                                 <li class="">
