--- a/pages/done_individuals.html
+++ b/pages/done_individuals.html
@@ -146,6 +146,42 @@
         </div>
         <!-- Start Notes modal -->
 
+        <!-- Start Dispatch Files modal -->
+        <div
+            aria-hidden="true"
+            class="modal fade bd-example-modal-sm"
+            role="dialog"
+            tabindex="-1"
+            style="top: 15%"
+            id="dispatch-job-modal"
+            data-keyboard="false"
+            data-backdrop="static"
+        >
+            <div id="edit-dispatch-modal-header" class="modal-dialog modal-sm">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button class="close move-left" type="button"><i class="icon-arrow-left"></i></button>
+                        <h5 class="modal-title">AWB / BL / CMR</h5>
+                        <button class="close move-right" type="button"><i class="icon-arrow-right"></i></button>
+                    </div>
+                    <div class="modal-body">
+                        <div class="form-group col-sm-12" style="display: none">
+                            <input class="form-control" id="done_dispatch_ind_id" />
+                            <input class="form-control" id="done_dispatch_group_id" />
+                        </div>
+                        <div class="form-group col-sm-12">
+                            <textarea class="form-control" rows="3" id="dispatch-number"></textarea>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button class="btn btn-secondary close-btn" data-modal-referer="dispatch-job-modal" type="button">Close</button>
+                        <button class="btn btn-primary" type="button" id="save-dispatch-number">Confirm</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- Start Dispatch Files modal -->
+
         <!-- Start Costs modal -->
         <div
             aria-hidden="true"
