Removed services btn and added it on mousetrap

--- a/pages/add_data.html
+++ b/pages/add_data.html
@@ -374,7 +374,7 @@
                             <div class="col-12">
                                 <button id="cities-btn" class="btn btn-outline-dark data-changer">Cities</button>
                                 <button id="vessels-btn" class="btn btn-outline-danger data-changer">Vessels</button>
-                                <button id="service-types-btn" class="btn btn-outline-primary data-changer">Services</button>
+                                <button id="service-types-btn" class="btn btn-outline-primary data-changer" style="display: none">Services</button>
                             </div>
                             <div class="col-12 data-table-div" id="cities-div" style="display: none">
                                 <div class="block bg-trans table-block mb-4">
@@ -464,6 +464,7 @@
         <script type="text/javascript" src="../assets/plugins/editable/editable.js"></script>
         <script type="text/javascript" src="../assets/js/toastr.js"></script>
         <script type="text/javascript" src="../assets/js/chosen/chosen.jquery.js"></script>
+        <script type="text/javascript" src="../assets/js/mousetrap.js"></script>
         <!--Full Calendar JS-->
         <script type="text/javascript" src="../assets/plugins/full-calendar/fullcalendar.min.js"></script>
 
