--- a/pages/individuals.html
+++ b/pages/individuals.html
@@ -128,7 +128,7 @@
                             <div class="row">
                                 <div class="col-sm-3">
                                     <div class="form-group">
-                                        <label> Department*</label>
+                                        <label class="green-label"> Department*</label>
                                         <select
                                             class="form-control select"
                                             id="division-select"
@@ -139,7 +139,7 @@
                                 </div>
                                 <div class="col-sm-3">
                                     <div class="form-group">
-                                        <label> Product*</label>
+                                        <label class="green-label"> Product*</label>
                                         <select
                                             class="form-control select"
                                             id="product-select"
@@ -151,7 +151,7 @@
                                 </div>
                                 <div class="col-sm-3">
                                     <div class="form-group">
-                                        <label> Vessel*</label>
+                                        <label class="green-label"> Vessel*</label>
                                         <select
                                             class="form-control select"
                                             id="vessel-select"
@@ -163,7 +163,7 @@
                                 </div>
                                 <div class="col-sm-3">
                                     <div class="form-group">
-                                        <label> Mode*</label>
+                                        <label class="green-label"> Mode*</label>
                                         <a class="mode-info" href="#"><i class="fa fa-info"></i></a>
                                         <select class="form-control select" id="mode-select" data-placeholder="Choose mode..." tabindex="1">
                                             <option></option>
@@ -179,7 +179,7 @@
                             <div class="row">
                                 <div class="col-sm-4" id="ex-input-div">
                                     <div class="form-group">
-                                        <label> Ex*</label>
+                                        <label class="green-label"> Ex*</label>
                                         <a id="add-city-btn" href="#"><i class="fa fa-plus-square"></i></a>
                                         <a id="refresh-city-btn" href="#"><i class="fa fa-refresh"></i></a>
                                         <select class="form-control select" id="ex-input" data-placeholder="Choose city..." tabindex="1"></select>
@@ -187,7 +187,7 @@
                                 </div>
                                 <div class="col-sm-4" id="to-input-div">
                                     <div class="form-group">
-                                        <label> To*</label>
+                                        <label class="green-label"> To*</label>
                                         <select class="form-control select" id="to-input" data-placeholder="Choose city..." tabindex="1"></select>
                                     </div>
                                 </div>
@@ -226,14 +226,14 @@
                                 </div>
                                 <div class="col-sm-2">
                                     <div class="form-group">
-                                        <label> WEIGHT (KG)</label>
+                                        <label class="green-label"> WEIGHT (KG)</label>
                                         <input type="number" class="form-control" placeholder="Weight (kg)..." id="kg" />
                                     </div>
                                 </div>
 
                                 <div class="col-sm-2">
                                     <div class="form-group">
-                                        <label> PIECES</label>
+                                        <label class="green-label"> PIECES</label>
                                         <input type="number" class="form-control" placeholder="Pieces..." id="pieces" />
                                     </div>
                                 </div>
@@ -247,12 +247,12 @@
                                 </div>
                                 <div class="col-sm-4">
                                     <div class="form-group">
-                                        <label> Reference</label>
+                                        <label class="green-label"> Reference</label>
                                         <input class="form-control" placeholder="Type reference number..." id="reference" type="text" />
                                     </div>
                                 </div>
                                 <div class="form-group col-sm-4">
-                                    <label>Deadline*</label>
+                                    <label class="green-label">Deadline*</label>
                                     <a id="remove-date" href="#"><i class="fa fa-calendar-minus-o"></i></a>
                                     <!-- <a class="deadline-info" href="#"><i class="fa fa-info"></i></a> -->
 
@@ -264,7 +264,7 @@
                             </div>
                             <div class="row">
                                 <div class="form-group col-sm-12">
-                                    <label>Notes / Dims</label>
+                                    <label>Notes / <span class="green-label">Dims</span></label>
                                     <textarea class="form-control" rows="3" id="notes"></textarea>
                                 </div>
                             </div>
